force-app/main/default/objects/LakeKing__c/LakeKing__c.object-meta.xml
<CustomObject>
    <label>LakeKing</label>
    <nameField>
        <label>Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LakeKing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>