force-app/main/default/objects/LakeKing__c/fields/Easting__c.field-meta.xml
<CustomField>
    <fullName>Easting__c</fullName>
    <label>Easting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>