force-app/main/default/objects/LakeKing__c/fields/FMS__c.field-meta.xml
<CustomField>
    <fullName>FMS__c</fullName>
    <label>FMS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>