force-app/main/default/objects/LakeKing__c/fields/Grex__c.field-meta.xml
<CustomField>
    <fullName>Grex__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grex</label>
    <referenceTo>Grex__c</referenceTo>
    <relationshipLabel>LakeKing</relationshipLabel>
    <relationshipName>LakeKing</relationshipName>
    <type>Lookup</type>
</CustomField>