force-app/main/default/objects/LakeKing__c/fields/Polygon__c.field-meta.xml
<CustomField>
    <fullName>Polygon__c</fullName>
    <label>Polygon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>