force-app/main/default/objects/LakeKing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Polygon__c</columns>
    <columns>Easting__c</columns>
    <columns>Northing__c</columns>
    <columns>FMS__c</columns>
    <columns>Grex__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>